[project]
name = "cspy"
version = "0.1.0"
description = "AP CSP Pseudo-code Interpreter"
readme = "README.md"
authors = [
    { name = "Edoc Li", email = "123019149+edocli@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"
